--- a/index.html
+++ b/index.html
@@ -25,20 +25,39 @@
 				</table>
 			</div>
 		<hr>
-			<h2>Animationen</h2>
-			<button class="btn" onclick="myMove()">Click Me</button> 
-			<div id ="myContainer">
-				<div id ="myAnimation"></div>
-			</div>
+			<div style="margin-left: auto; margin-right: auto; width: 200px;">
+				<h2>Animationen</h2>
+				<button class="btn" onclick="myMove()">Click Me</button> 
+				<div id ="myContainer">
+					<div id ="myAnimation"></div>
+				</div>
 			<br>
-			<div id="myProgress">
- 				<div id="myBar"><span id="probar01"><span></div>
+				<div id="myProgress">
+ 					<div id="myBar"><span id="probar01"><span></div>
+				</div>
 			</div>
 		<hr>
 			<div id="projects">
 			<h2>Projekte</h2>
 				<div id="div_gridcontainer">
-					<div class="grid_left" style="border: 1px solid none; border-radius: 10px 0px 0px 0px;">
+					<table id="tbl_projects">
+						<tr>
+							<td class="td_projects">
+								<table cellspacing="1" cellpadding="1">
+									<tr id="tr_projects1">
+									</tr>
+								</table>
+							</td>
+							<td class="td_projects">
+								<table cellspacing="1" cellpadding="1">
+									<tr id="tr_projects2">
+									</tr>
+								</table>
+							</td>
+						</tr>
+						<tr></tr>
+					</table>
+					<!--<div class="grid_left" style="border: 1px solid none; border-radius: 10px 0px 0px 0px;">
 						<table cellspacing="1" cellpadding="1">
 							<tr id="tr_projects1">
 							</tr>
@@ -49,7 +68,8 @@
 							<tr id="tr_projects2">
 							</tr>
 						</table>
-					</div>
+					</div>-->
+					
 					<div class="grid_left" style="border: 1px solid none; border-radius: 0px 0px 10px 10px;">
 						<table cellspacing="1" cellpadding="1">
 							<tr id="tr_projects3">
@@ -63,7 +83,7 @@
 						<h3>ProjektListe</h3>
 					</div>
 					<div id="div_proListe_body">
-						<table cellspacing="1" cellpadding="1">
+						<table cellspacing="1" cellpadding="1" style="width:100%;">
 							<tr style="font-weight: bold;">
 								<td>#</td>
 								<td>Titel</td>
@@ -76,6 +96,28 @@
 				</div>
 			</div>
 		<br>
+			<h3>2015 / 2016</h3>
+		<br>
+			<div id="div_praktikum_header">
+				<h3>Praktikum</h3>
+				<span>Legon Informatik AG 2015-2016<span>
+				<img src="./Images/legon01.jpg" style="height:20px; float: right; margin-top: -15px; margin-right: 5px;">
+				<button id="btn_praktikum" class="btn_praktikum" onclick="show_bericht();">+</button>
+			</div>
+			<div id="div_praktikum">
+				<textarea id="txt_praktikum" rows="4" cols="50">
+				</textarea>
+			</div>
+		<br>
+			<div id="div_praktikum_header">
+				<h3>Militär</h3>
+				<span>PZ OS 1-1<span>
+				<button class="btn_praktikum">+</button>
+			</div>
+		<br>
+			<div id="div_news">
+			</div>
+		<hr>
 		<hr>
 			<h3>Changelog</h3>
 				<div id="div_changelog">
@@ -95,7 +137,7 @@
 		&copy; 
 		<span>Adminslair 2016</span> 
 		<img src="./Images/logo-48.png" height="20px">
-		<span style="float:right; padding: 10px;">Kuschel aka Half</span> 
+		<span style="float:right; padding: 10px;">by Kuschel/Half</span> 
 		<br>
 		<span style="font-size: 12px;">Last update:</span>
 		<span style="font-size: 12px;" id="span_lastupdate"></span>
