--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 	</head>
 	<div id="body">
 		<h1><img src="./Images/logo-48.png">Adminslair</h1>
+		<div id="banner-wrap">
+			<video id="video-bg-elem" preload="auto" autoplay="true" loop="loop" muted="muted"> 
+				<source src="./Images/Video/MVI_1272.mp4" type="video/mp4">
+				Video not supported
+			</video>
+		</div>
 		<hr>
 			<h2>Serverstatus</h2>
 			<div id="server_status">
@@ -145,5 +151,8 @@
 	<!-- Script -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 	<script src="js.js"></script>
+
+	<!-- VIDEO FILE FROM http://www.videezy.com/ -->
+
 </body>
 </html>
