--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h1><img src="./Images/logo-48.png">Adminslair</h1>
 		<div id="banner-wrap">
 			<video id="video-bg-elem" preload="auto" autoplay="true" loop="loop" muted="muted"> 
-				<source src="./Images/Video/MVI_1272.mp4" type="video/mp4">
+				<source src="./Images/Video/MVI_1272_01.mp4" type="video/mp4">
 				Video not supported
 			</video>
 		</div>
