--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 				Video not supported
 			</video>
 		</div>
-		<hr>
-			<h2>Serverstatus</h2>
+		<br>
+		<br>
+			<h2>Willkommen</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br> - Kusch</p>
+		<br>
+			<!--<h2>Serverstatus</h2>
 			<div id="server_status">
 				<table style="margin-left: auto; margin-right: auto;">
 					<tr><td colspan="2" style="text-align: center; font-weight: bold;">Server-Check<td></tr>
@@ -30,12 +34,13 @@
 				<span id="lastTry" style="font-size: 12px;"></span></td></tr>
 				</table>
 			</div>
-		<hr>
-			<div style="margin-left: auto; margin-right: auto; width: 200px;">
+		<hr>-->
+			<div style="width: 200px;">
 				<h2>Animationen</h2>
 				<button class="btn" onclick="myMove()">Click Me</button> 
 				<div id ="myContainer">
 					<div id ="myAnimation"></div>
+					<div id ="myAnimation2"></div>
 				</div>
 			<br>
 				<div id="myProgress">
@@ -123,20 +128,36 @@
 		<br>
 			<div id="div_news">
 			</div>
-		<hr>
-		<hr>
+		<hr style="margin-left: 0px">
+		<div style="margin-left: auto; margin-right: auto; width: 300px;">
 			<h3>Changelog</h3>
-				<div id="div_changelog">
-					<table id="tbl_changelog" cellspacing="1" cellpadding="1">
-						<tr style="font-weight: bold;">
-							<td>v.</td>
-							<td>Titel</td>
-							<td>Datum</td>
-						</tr>
-						<tr id="tr_changelog">
-						</tr>
-					</table>
-				</div>
+		<br>
+				<table cellspacing="0" cellpadding="0">
+					<tr>
+						<td>
+							<div id="div_changelog">
+								<table id="tbl_changelog" cellspacing="1" cellpadding="1">
+									<tr style="font-weight: bold;">
+										<td>v.</td>
+										<td>Titel</td>
+										<td>Datum</td>
+									</tr>
+										<tr id="tr_changelog">
+									</tr>
+								</table>
+							</div>
+						</td>
+						<td>
+							<div class="moviecontainer">
+								<video id="movie2" preload="auto" autoplay="true" loop="loop" muted="muted"> 
+									<source src="./Images/Video/blue.mp4" type="video/mp4">
+									Video not supported
+								</video>
+							</div>
+						</td>
+					</tr>
+				</table>
+		</div>
 		<br>
 	</div>
 	<footer>
